# YieldHabitat_

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
backend/src/: index.ts
backend/src/controllers/: propertyController.ts  transactionController.ts  userController.ts
backend/src/middleware/: errorMiddleware.ts
backend/src/models/: PropertyModel.ts  TransactionModel.ts  UserModel.ts
backend/src/routes/: propertyRoutes.ts  transactionRoutes.ts  userRoutes.ts
contracts/: .env.example  Anchor.toml  README.md  hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/bridge/: ChainBridge.sol
contracts/contracts/evm/bsc/: PropertyTokenBSC.sol
contracts/contracts/evm/ethereum/: PropertyToken.sol
contracts/contracts/evm/polygon/: PropertyTokenPolygon.sol
contracts/programs/property-tokenization/: Cargo.toml
contracts/programs/property-tokenization/src/: instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
contracts/scripts/: deploy-bsc.ts  generate-idl.ts
contracts/scripts/bridge/: start-bridge.ts  types.ts
contracts/src/programs/marketplace/: lib.rs
contracts/src/programs/property-tokenization/: lib.rs
contracts/src/programs/registry/: lib.rs
contracts/src/solana-bridge/: bridge.ts
docs/: README.md  api.md  architecture.md  blockchain-integration.md
frontend/: .env.example  Dockerfile  README.md  package.json
scripts/: README.md
shared/: README.md
shared/types/: property.ts
